--- a/Cd2.html
+++ b/Cd2.html
@@ -31,7 +31,7 @@
             <nav class="subtitles">
 
 
-                <a class="subtitle" href="Cinderellaa.html" style="background-color:rgb(250, 251, 254)">
+                <a class="subtitle" href="index.html" style="background-color:rgb(250, 251, 254)">
                     <div class="content">
                         <h3>The Classic Fairy Tales: Cinderella</h3>
                         <p>Introduction, Brothers Grimm,...</p>
@@ -352,7 +352,7 @@
             <!-- Section 4 -->
             <section class="section-four">
                 <img src="Cdcomment.png" alt="1" class="png-button memo-button">
-                <a href="/index.html"><img src="Cdhome.png" alt="2" class="png-button"></a>
+                <a href="http://happilyeverarchive.com/"><img src="Cdhome.png" alt="2" class="png-button"></a>
                 <img src="Cdd.png" alt="3" class="png-button">
             </section>
         </article>
