--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinderella</title>
-    <link rel="stylesheet" href="Cinderellaa.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
             <nav class="subtitles">
 
 
-                <a class="subtitle" href="Cinderellaa.html" style="background-color:rgb(250, 251, 254)">
+                <a class="subtitle" href="index.html" style="background-color:rgb(250, 251, 254)">
                     <div class="content">
                         <h3>The Classic Fairy Tales: Cinderella</h3>
                         <p>Introduction, Brothers Grimm,...</p>
@@ -336,7 +336,7 @@
             <!-- Section 4 -->
             <section class="section-four">
                 <img src="Cdcomment.png" alt="1" class="png-button memo-button">
-                <a href="/index.html"><img src="Cdhome.png" alt="2" class="png-button"></a>
+                <a href="http://happilyeverarchive.com/"><img src="Cdhome.png" alt="2" class="png-button"></a>
                 <img src="Cdd.png" alt="3" class="png-button">
             </section>
         </article>
@@ -357,7 +357,7 @@
 
     </div>
 
-    <script src="Cinderellaa.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
