--- a/Cd4.html
+++ b/Cd4.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Red Riding Hood</title>
-    <link rel="stylesheet" href="Cinderellaa.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -201,7 +201,7 @@
 
     </div>
 
-    <script src="Cinderellaa.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
