--- a/Cd2.html
+++ b/Cd2.html
@@ -27,7 +27,7 @@
 
     <div class="containerr">
         <nav class="subtitless">
-            <h2 class="subtitles-content">Cinderellaa</h2>
+            <h2 class="subtitles-content">Cinderella</h2>
             <nav class="subtitles">
 
 
@@ -343,9 +343,7 @@
                     Another moral: Without doubt it is a great advantage to have intelligence, courage, good breeding,
                     and common sense. These, and similar talents come only from heaven, and it is good to have them.
                     However, even these may fail to bring you success, without the blessing of a godfather or a
-                    godmother.
-
-                </p>
+                    godmother. </p>
 
             </section>
 
