--- a/Cdquiz.html
+++ b/Cdquiz.html
@@ -26,7 +26,7 @@
       <div class="game-container"></div>
       <div class="button-container">
         <button id="stop" class="hide">Stop Game</button>
-        <a href="index.html" id="home" class="hide">Home</a>
+        <a href="https://minnielee.github.io/Cinderella/" id="home" class="hide">Home</a>
       </div>
 
     <div class="controls-container">
