--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <div class="list-content">
                     <div class="list-header">Fairy Tales</div>
                     <ul style="list-style: none; padding: 0; font-size: 18px;">
-                        <li><a href="LRRH/LRRH.html" target="_blank">Little Red Riding Hood</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Sleeping_Beauty_(1959_film)" target="_blank">Sleeping
+                        <li><a href="https://minnielee.github.io/LRRH/" target="_blank">Little Red Riding Hood</a></li>
+                        <li><a href="https://minnielee.github.io/Sleeping-Beauty/" target="_blank">Sleeping
                                 Beauty</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Bluebeard" target="_blank">Bluebeard</a></li>
                     </ul>
